# infer

./: .gitignore  Cargo.toml  README.md
local/: list-events.sh  run.sh  setenv.sh
src/: inferer.rs  main.rs
