[package]
name = "predict"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# chrono = "0.4.38"
# futures = "0.3.30"
# Trim down features later
anyhow = "1.0.82"
tokio = { version = "1.37.0", features = ["full"] }

# shared-types = { git = "https://github.com/mentics-ml-demo/shared-types.git", branch = "main" }
shared-types = { path = "/home/jshellman/dev/ml-demo/shared-types" }
# series-store = { git = "https://github.com/mentics-ml-demo/series-store.git", branch = "main" }
series-store = { path = "/home/jshellman/dev/ml-demo/series-store" }
# kv-store = { git = "https://github.com/mentics-ml-demo/kv-store.git", branch = "main" }
kv-store = { path = "/home/jshellman/dev/ml-demo/kv-store" }
