[package]
name = "predict"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", default-features = false }
# futures = "0.3.30"
anyhow = "1.0.82"
# Trim down features for tokio later
tokio = { version = "1.37.0", features = ["full"] }
# burn = { version = "0.13.2", features = ["train", "wgpu"] }
# burn = { git = "https://github.com/tracel-ai/burn.git", default-features = false, features = ["std", "autodiff", "wgpu", "fusion"] }
burn = { git = "https://github.com/tracel-ai/burn.git", default-features = false, features = ["std", "autodiff", "fusion", "candle-cuda"] }
# or maybe could use "train" and "sqlite_bundled" features instead of "autodiff" if I ever need dataset feature

# shared-types = { git = "https://github.com/mentics-online-ml/shared-types.git", branch = "main" }
shared-types = { path = "../shared-types" }
# series-store = { git = "https://github.com/mentics-online-ml/series-store.git", branch = "main" }
series-store = { path = "../series-store" }
# kv-store = { git = "https://github.com/mentics-online-ml/kv-store.git", branch = "main" }
kv-store = { path = "../kv-store" }
# shared-burn = { git = "https://github.com/mentics-online-ml/shared-burn.git", branch = "main" }
shared-burn = { path = "../shared-burn" }
